--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Sphinx==7.1.2
 furo==2023.9.10
-myst-parser==2.0.0
 pyvista==0.43.1
+Sphinx==7.1.2
+sphinx-design==0.5.0
+trame==3.5.0
+trame-vtk==2.6.3
+trame-vuetify==2.3.1
