--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: awalsh128/cache-apt-pkgs-action@1.1.3
+      - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: xvfb
           version: 1.0
