--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -11,6 +11,12 @@ jobs:
         with:
           packages: xvfb
           version: 1.0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: 'pip'
+          cache-dependency-path: |
+            requirements.txt
       - run: make html
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
