--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -14,10 +14,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-          cache: 'pip'
-          cache-dependency-path: |
-            requirements.txt
-      - run: make html
+      - run: |
+          pip install -r requirements.txt
+          make html
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
         with:
