--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -5,6 +5,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      PYVISTA_OFF_SCREEN: 'True'
+      ALLOW_PLOTTING: true
+      SHELLOPTS: 'errexit:pipefail'
     steps:
       - uses: actions/checkout@v3
       - uses: awalsh128/cache-apt-pkgs-action@latest
@@ -14,9 +18,8 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - run: |
-          pip install -r requirements.txt
-          make html
+      - run: pip install -r requirements.txt
+      - run: make html
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
         with:
