--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - run: sudo apt-get install xvfb
+      - run: sudo apt-get install xvfb libgl1-mesa-dev
       - run: pip install -r requirements.txt
       - run: make html
       - name: Deploy to Netlify
