--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -15,7 +15,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - run: sudo apt-get install xvfb libgl1-mesa-dev
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -yqq libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 libopengl0 libegl1
+          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset
+          sudo apt-get update
+          sudo apt-get install libosmesa6-dev libgl1-mesa-dev python3-tk pandoc git-restore-mtime
+          sudo apt-get install python3-tk xcb
       - run: pip install -r requirements.txt
       - run: make html
       - name: Deploy to Netlify
