--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ jupyterlab==4.0.10
 # osmnx==1.8.1
 # pydata-sphinx-theme==0.14.4
 # pypandoc==1.12
-# pytest-sphinx==0.5.0
+pytest-sphinx==0.5.0
 pyvista==0.43.1
 # scipy==1.11.4
 sphinx==7.2.6
@@ -30,4 +30,4 @@ sphinxcontrib-websupport==1.2.6
 trame==3.5.0
 trame-vtk==2.6.3
 trame-vuetify==2.3.1
-trimesh==4.0.8
+# trimesh==4.0.8
