--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ jupyterlab==4.0.10
 # numpydoc==1.6.0
 # osmnx==1.8.1
 # pydata-sphinx-theme==0.14.4
-# pypandoc==1.12
+pypandoc==1.12
 pytest-sphinx==0.5.0
 pyvista==0.43.1
 scipy==1.11.4
