--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ jupyterlab==4.0.10
 # mypy==1.8.0
 # mypy-extensions==1.0.0
 # numpydoc==1.6.0
-osmnx==1.8.1
+# osmnx==1.8.1
 pydata-sphinx-theme==0.14.4
 pypandoc==1.12
 pytest-sphinx==0.5.0
