--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-Sphinx==7.2.6
 furo==2023.9.10
-myst-parser==2.0.0
+jupyter_sphinx==0.5.3
+jupyterlab==4.0.10
+osmnx==1.8.1
+pyvista==0.43.1
+sphinx==7.2.6
+sphinx-design==0.5.0
+trame==3.5.0
+trame-vtk==2.6.3
+trame-vuetify==2.3.1
