--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 furo==2023.9.10
 jupyter_sphinx==0.5.3
 jupyterlab==4.0.10
-# osmnx==1.8.1
+osmnx==1.8.1
 pyvista==0.43.1
 sphinx==7.2.6
 sphinx-design==0.5.0
