--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
 furo==2023.9.10
-jupyter_sphinx==0.5.3
-jupyterlab==4.0.10
-matplotlib>=3.5
-pyvista==0.43.1
+pyvista[jupyter,trame]==0.43.1
 sphinx==7.2.6
 sphinx-design==0.5.0
-trame==3.5.0
-trame-vtk==2.6.3
-trame-vuetify==2.3.1
