--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-furo==2023.9.10
-pyvista[jupyter,trame]==0.43.1
-sphinx==7.2.6
-sphinx-design==0.5.0
+furo
+pyvista[jupyter,trame]>=0.43.1
+pydata-sphinx-theme
+pypandoc
+pytest-sphinx
+Sphinx
+sphinx-autobuild
+sphinx-copybutton
+sphinx-design
+sphinx-gallery
+sphinx-toolbox
+sphinxcontrib-asciinema
+sphinxcontrib-websupport
+typed-ast
