--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-furo
-pyvista[jupyter,trame]>=0.43.1
-pydata-sphinx-theme
-pypandoc
-pytest-sphinx
-Sphinx
-sphinx-autobuild
-sphinx-copybutton
-sphinx-design
-sphinx-gallery
-sphinx-toolbox
-sphinxcontrib-asciinema
-sphinxcontrib-websupport
-typed-ast
+furo==2023.9.10
+jupyter_sphinx==0.5.3
+jupyterlab==4.0.10
+osmnx==1.8.1
+pyvista==0.43.1
+sphinx==7.2.6
+sphinx-design==0.5.0
+trame==3.5.0
+trame-vtk==2.6.3
+trame-vuetify==2.3.1
