--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-fiona==1.9.5
 furo==2023.9.10
-# networkx==3.2.1
-# pandas==2.1.4
-# requests==2.27
 pyvista[jupyter,trame]==0.43.1
 sphinx==7.2.6
 sphinx-design==0.5.0
+sphinxcontrib-websupport==1.2.7
