--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ furo==2023.9.10
 pyvista[jupyter,trame]==0.43.1
 sphinx==7.2.6
 sphinx-design==0.5.0
+sphinx-toolbox==3.5.0
 sphinxcontrib-websupport==1.2.7
