--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-# fiona==1.9.5
-attrs>=19.2.0
-certifi
-click~=8.0
-click-plugins>=1.0
-cligj>=0.5
-furo==2023.9.10
+fiona==1.9.5
+# furo==2023.9.10
 pyvista[jupyter,trame]==0.43.1
 sphinx==7.2.6
 sphinx-design==0.5.0
