--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -19,7 +19,7 @@ jobs:
         uses: nwtgck/actions-netlify@v2.0
         with:
           publish-dir: '_build/html'
-          production-branch: master
+          production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
           enable-pull-request-comment: true
